aryan replace zelmay as usabo teacher

--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -63,13 +63,14 @@
 
         <div class="break"></div>
 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/zelmay.png"/>
+        <div class="profile-card" style="height: 485px;">
+          <img src="assets/webstuff/pplimg/aryanbora.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Zelmay Jan</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
             <ul>
-              <li>USABO top 50</li>
-              <li>USMDO gold medalist</li>
+              <li>USABO National Finalist</li>
+              <li>USNCO Honors</li>
+              <li>USACO Platinum division</li>
             </ul>
           </div>
         </div>
