mmalachi = new useso instructor

--- a/usesobootpage.html
+++ b/usesobootpage.html
@@ -82,6 +82,20 @@
           </div>
         </div>
 
+        <div class="break"></div>
+ 
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/malachi.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Malachi Noel</h2>
+            <ul>
+              <li>IESO Gold Medalist</li>
+              <li>Scioly national 2nd place</li>
+            </ul>
+          </div>
+        </div>
+
     </div>
 
     <section class="container">
