--- a/team.html
+++ b/team.html
@@ -824,12 +824,13 @@
     
   <div class="writers">
     <div class="bottomprof">
-      <img src="assets/webstuff/pplimg/yifu zuo.png" />
+      <img src="assets/webstuff/pplimg/ankit.png" />
       <div class = "writerdetails">
-        <h4>Yifu Zuo</h4>
+        <h4>Ankit Biswas</h4>
         <p style="margin-bottom: 10px; color: #deff00">Director of Design</p>
         <ul style="font-size: 90%;">
-          <li>ISEF finalist in translational medicine</li>
+          <li>ISEF 3rd place in Physics</li>
+          <li>Davidson Fellow</li>
         </ul>
       </div>
     </div>  
