created naclo bootcamp page
To do:
create the naclo bootcamp info page
create popup to redirect to naclo from home

--- a/programs.html
+++ b/programs.html
@@ -72,6 +72,12 @@
       <p id="idk">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.</p>
       <a id="idek" style="  color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
+
+    <section class="naclo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100">
+      <h2>NACLO bootcamp</h2>
+      <p id="idk">Taught by IOL medalists & NACLO winners, this 10 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO.</p>
+      <a id="idek" style=" color: smth" href="smth"><p style="margin-top: 10px">Learn More </p></a>
+    </section>
   </div>
 
   <section class="copyright">
