--- a/team.html
+++ b/team.html
@@ -461,7 +461,7 @@
     <div class="bottomprof">
       <img src="assets/webstuff/pplimg/rishabh vakil.png" />
       <div class = "writerdetails">
-        <h4>Rishab Vakil</h4>
+        <h4>Rishabh Vakil</h4>
         <p style="margin-bottom: 10px; color: #cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
           <li>USESO national finalist</li>
