finished naclo yay

--- a/naclobootpage.html
+++ b/naclobootpage.html
@@ -27,8 +27,8 @@
     
     <section class="description">
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 10 classes from December 12th to January 23th (2023-2024)</p>
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: NACLO is one of the premier olympiads in the United States </p>
-        <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Python knowledge is not required; however, some programming experience is recommended.</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the NACLO open round, assuming no prior experience with linguistics or linguistics olympiads. We will cover fundamental topics in linguistics with a special focus on problem-solving, including Phonology, Syntax, Semantics and Morphology. By the end of the bootcamp, students should have enough knowledge to qualify for the prestigious NACLO Invitationals exam.</p>
+        <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None, although a knack for solving logic puzzles is expected.</p>
     </section>
 
 
@@ -76,7 +76,7 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScMTvQDJxxSTWi5-JGcmch50uuap7jCQX2KuOfYSIZvDfcj8w/viewform"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
