--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
       <div class="profile-details">
         <p>Chief Human Resources Officer</p>
         <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
-        <p style="font-size: 90%;">Aryan has been fascinated by STEM throughout his entire life. He is a USABO National Finalist, USAJMO winner, USACO Platinum Division competitor, USNCO Honors awardee, USAPhO Bronze Medal recipient, and is currently conducting research in math at MIT PRIMES-USA. As the CHRO at Pandorax, Aryan hopes to share his love of STEM with other science enthusiasts.</p>
+        <p style="font-size: 90%;">Aryan has been fascinated by STEM throughout his entire life. As an incoming freshman at MIT, he is a USABO National Finalist, USAJMO winner, USACO Platinum Division competitor, USNCO Honors awardee, USAPhO Bronze Medal recipient, and is currently conducting research in math at MIT PRIMES-USA. As the CHRO at Pandorax, Aryan hopes to share his love of STEM with other science enthusiasts.</p>
       </div>
       <div class="social-details">
         <a href="#"><i class="fa fa-facebook"></i></a>
