--- a/programs.html
+++ b/programs.html
@@ -38,13 +38,13 @@
   </section>
 
   <section class="stats" data-aos="fade-in" data-aos-once="true" data-aos-delay="150" data-aos="zoom-in" data-aos-easing="ease-in">
-    <p>300+</p>
-    <p>17</p>
+    <p>400+</p>
+    <p>20</p>
   </section>
 
   <div class="info">
     <section class="naclo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100">
-      <h2>NACLO bootcamp</h2>
+      <h2>NACLO Bootcamp</h2>
       <p id="idk">Taught by IOL medalists & NACLO winners, this 10 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color: smth" href="naclobootpage.html"><p style="margin-top: 10px">Learn More </p></a>
     </section> 
