--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   <section id="contact" style="display: flex; flex-direction: column; align-items: center;">
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
     <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our projects and programs are prepared and taught by an international team of 50+ quality instructors from top high schools and universities, including MIT, Stanford, and Caltech, having all received national or international recognition in prestigious STEM competitions. With our large, highly experienced staff team, Pandorax is dedicated to promoting the next generation of scientists and innovators. And it starts with you.</p>
-    <div id="ppl" data-aos="zoom-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
+    <!-- <div id="ppl" data-aos="zoom-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
       <img id="pplimg" src="assets/webstuff/ppl.png" >
-    </div>
+    </div> -->
   </section>
 
   <section id="thingy" style="display: flex; flex-direction: column; align-items: center;">
