--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 
   <div class = "woweza card-container" >
     <img id="aa" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/usaaao_guide.png" />
-    <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50" src="assets/webstuff/usabo_guide.png" />
-    <img id="c" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/calculus_primer.png" />
+    <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
+    <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
+    <img id="c" data-aos="fade-up"  data-aos-once="true" data-aos-delay="150" src="assets/webstuff/calculus_primer.png" />
   </div>
 
 
