ong made mit!!!

--- a/team.html
+++ b/team.html
@@ -126,6 +126,7 @@
         <ul style="font-size: 90%;">
           <li>IPhO silver medalist</li>
           <li>IOAA gold medalist</li>
+          <li>MIT '28</li>
         </ul>
       </div>
     </div>
@@ -617,6 +618,7 @@
         <ul style="font-size: 90%;">
           <li>IPhO silver medalist</li>
           <li>IOAA gold medalist</li>
+          <li>MIT '28</li>
         </ul>
       </div>
     </div>  
