--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -38,13 +38,14 @@
     <h3>Our Instructors</h2>
 
     <div class="executive"> 
-        <div class="profile-card">
+        <div class="profile-card" style="height: 485px;">
           <img src="assets/webstuff/pplimg/ong zhi zhang.png" alt="David Zhou"/>
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Ong Zhi Zhang</h2>
             <ul>
               <li>IPhO silver medalist</li>
               <li>IOAA gold medalist</li>
+              <li>MIT '28</li>
             </ul>
           </div>
         </div>
