--- a/team.html
+++ b/team.html
@@ -211,6 +211,7 @@
         <h4>Aashray Chegu</h4>
         <p style="margin-bottom: 10px; color:#cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Stanford '28</li>
           <li>IESO gold medalist</li>
           <li>SciOly national champion</li>
         </ul>
@@ -753,6 +754,7 @@
         <h4>Aashray Chegu</h4>
         <p style="margin-bottom: 10px; color: #cfe2f3">USESO Bootcamp</p>
         <ul style="font-size: 90%;"> 
+          <li>Stanford '28</li>
           <li>IESO gold medalist </li>
           <li>Scioly national champion</li>
         </ul>
@@ -889,6 +891,7 @@
         <h4>Aashray Chegu</h4>
         <p style="margin-bottom: 10px; color: #deff00">Outreach</p>
         <ul style="font-size: 90%;">
+          <li>Stanford '28</li>
           <li>IESO gold medalist</li>
           <li>Scioly national champion</li>
         </ul>
