--- a/usesobootpage.html
+++ b/usesobootpage.html
@@ -66,6 +66,7 @@
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
             <ul>
+              <li>Stanford '28</li>
               <li>IESO Gold Medalist</li>
             </ul>
           </div>
