--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -64,11 +64,12 @@
 
         <div class="break"></div>
 
-        <div class="profile-card" style="height: 485px">
+        <div class="profile-card" style="height: 505px">
           <img src="assets/webstuff/pplimg/yufei chen.png"/>
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Yufei Chen</h2>
             <ul>
+              <li>MIT '28</li>
               <li>IChO alternate</li>
               <li>IBO top gold (ranked #1)</li>
               <li>IESO gold medalist (ranked #5)</li>
