--- a/team.html
+++ b/team.html
@@ -653,6 +653,7 @@
         <h4>Yufei Chen</h4>
         <p style="margin-bottom: 10px; color: #11bf40;">USNCO Bootcamp</p>
         <ul style="font-size: 90%;">
+          <li>MIT '28</li>
           <li>IBO top gold (ranked #1)</li>
           <li>IChO alternate</li>
           <li>IESO gold medalist (ranked #5)</li>
