--- a/projects.html
+++ b/projects.html
@@ -56,15 +56,15 @@
       <div class="parallax calcp">
         <section class="calcp-content" >
           <h2 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" >Calculus Primer</h2>
-          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Master the fundamental knowledge for the Physics Olympiad and beyond.</p>
-          <a href="https://www.calc.guide"><button id="calcpop">Learn More</button></a>
+          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Master the fundamental knowledge for the Physics Olympiad and beyond. (site is down right now, so use this link to access folder)</p>
+          <a href="https://github.com/pyukey/Pandoraxpdfs/tree/main/Pandorax/CalcPrimer"><button id="calcpop">Learn More</button></a>
         </section>
       </div>
 
       <div class="parallax usaaao">
         <section class="usaaao-content">
           <h1 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" style="color: #d9d2e9">USAAAO Guide</h1>
-          <p id="augha"data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Guiding your interest and success for the Astrophysics Olympiad, and beyond.</p>
+          <p id="augha"data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Guiding your interest and success for the Astrophysics Olympiad, and beyond. (site currently down)</p>
           <a href="https://usaaao.guide"><button id="usa">Learn More</button></a>
         </section>
       </div>
