--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
       <div class="parallax usaaao">
         <section class="usaaao-content">
           <h1 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" style="color: #d9d2e9">USAAAO Guide</h1>
-          <p id="augha"data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Guiding your interest and success for the Astrophysics Olympiad, and beyond. (site currently down)</p>
+          <p id="augha"data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Guiding your interest and success for the Astrophysics Olympiad, and beyond.</p>
           <a href="https://usaaao.guide"><button id="usa">Learn More</button></a>
         </section>
       </div>
