--- a/projects.html
+++ b/projects.html
@@ -79,9 +79,8 @@
 
       <div class="parallax seekso">
         <section class="seekso-content">
-          <h1 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" >Seekso.org</h1>
-          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-easing="True" data-aos-delay="50" >The Smart Search Engine made for students, by students.</p>
-          <a href="https://seekso.org"><button id="seeksop">Learn More</button></a>
+          <h1 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" ></h1>
+          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-easing="True" data-aos-delay="50" ></p>
         </section>
       </div>
 
