--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
       <section class="top">
         <div class="background"></div>
         <div class="content">
-          <p>At Pandorax, our team of experts developed 1000+ pages of content for the Earth Science, Astronomy and Astrophysics, Biology, and Physics Olympiads. Collectively known as the Olympiad Guides, these resources instill interest and knowledge of the collegiate-level sciences in any curious dreamer and are an excellent preparation tool for international science Olympiad competitions. Pandorax also operates Seekso.org, an AI search engine with a unique helpful filter for student researchers and professionals. Tens of thousands of users have used our products to achieve their dreams. </p>
+          <p>At Pandorax, our team of experts developed 1000+ pages of content for the Earth Science, Astronomy and Astrophysics, Biology, and Physics Olympiads. Collectively known as the Olympiad Guides, these resources instill interest and knowledge of the collegiate-level sciences in any curious dreamer and are an excellent preparation tool for international science Olympiad competitions. Tens of thousands of users have used our products to achieve their dreams. </p>
         </div>
       
         <section class="title" data-aos="fade-in" data-aos-once="true" data-aos="zoom-in" data-aos-easing="ease-in">
