fixed calc.guide and seekso

--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
       <div class="parallax calcp">
         <section class="calcp-content" >
           <h2 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" >Calculus Primer</h2>
-          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Master the fundamental knowledge for the Physics Olympiad and beyond. (site is down right now, so use this link to access folder)</p>
-          <a href="https://github.com/pyukey/Pandoraxpdfs/tree/main/Pandorax/CalcPrimer"><button id="calcpop">Learn More</button></a>
+          <p id="augh" data-aos="fade-up" data-aos-once="true" data-aos-delay="50" data-aos-easing="True" >Master the fundamental knowledge for the Physics Olympiad and beyond.</p>
+          <a href="https://calc.guide"><button id="calcpop">Learn More</button></a>
         </section>
       </div>
 
