--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Pandorax</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" href="assets/webstuff/pandoraxO">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <style>
     @import url('https://fonts.cdnfonts.com/css/poppins');
   </style>
@@ -35,6 +36,8 @@
     </h1>
     <p id="btext">Turning dreams into reality.</p>
   </section>
+<div class="arrow animated bounce"></div>
+
 
   <section id="about" style="margin-top: 10vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
@@ -103,6 +106,19 @@
   
     // Attach the scroll event listener
     window.addEventListener('scroll', handleScroll);
+  </script>
+  <script>
+  $(document).ready(function() {
+  
+    $(window).scroll(function() {
+      var scroll = $(window).scrollTop();
+      if (scroll >= 1) {
+        $('.arrow').addClass('fade');
+      } else{
+        $('.arrow').removeClass('fade');
+      }
+    })
+  });
   </script>
   <script>
     document.addEventListener("DOMContentLoaded", (event) => {
