weirdo ceo stuff

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
     <h1>
       <img id="title" src="assets/webstuff/pandorax_new_logo.png" />
       <!-- <span id="title">Pandorax</span> -->
+       
     </h1>
     <p id="btext">Turning dreams into reality.</p>
+    <div id="container">
+      <a href="projects.html">
+        <button class="btna" style="width: 175px; height: 70px; font-size: large; ">Get Started</button>
+      </a>
+    </div>
   </section>
 <div id='frf' class="arrow animated bounce"></div>
 
