--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,15 @@
 </section>
 
 <body>
+  <section class="parallax usabo">
+    <section class="usabo-content">
+      <h1 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" >USABO Guide</h1>
+      <p id="augh"data-aos="fade-up" data-aos-once="true" data-aos-easing="True" data-aos-delay="50" >Guiding your interest and success for the Biology Olympiad, and beyond.</p>
+      <a href="https://www.bioly.guide"><button id="usabob">Learn More</button></a>
+    </section>
+  </section>
+
+
       <div class="parallax calcp">
         <section class="calcp-content" >
           <h2 data-aos="fade-up" data-aos-once="true" data-aos-easing="True" >Calculus Primer</h2>
