team page navbar 2.0

--- a/team.html
+++ b/team.html
@@ -12,20 +12,21 @@
     </style>
 </head>
 <body>
+  <div class="background"></div>
   <header >
-      <div class="crazy">
-          <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
-      </div>
-      <div class="head" style="padding-bottom: 2vh">
-          <a href="projects.html"><button id="prod">Projects</button></a>
-          <a href="programs.html"><button id="prog">Programs</button></a>
-          <a href="team.html"><button id="te">Our Team</button></a>
-          <a href="contact.html"><button id="cont">Contact</button></a>
-      </div>
+    <div class="head" style="padding-bottom: 2vh">
+      <div><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /> </div>
+      <a href="index.html"><button id="yoop">Home</button></a>
+      <!-- <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a> -->
+      <a href="projects.html"><button id="prod">Projects</button></a>
+      <a href="programs.html"><button id="prog">Programs</button></a>
+      <a href="team.html"><button id="te">Our Team</button></a>
+      <a href="contact.html"><button id="cont">Contact</button></a>
+  </div>
   </header>
 
   <section style="position: relative"> 
-    <div class="background"></div>
+    
       <div class="content">
         <p>According to Greek mythology, Pandora's box was a magical artifact that trapped a multitude of all troubles and sorrows in the world, which were released upon opening of this box, leaving only hope trapped inside. Knowledge, in a similar way, could bring advancement and peace to society, or also trouble — if used by the wrong hands. At Pandorax, we teach the knowledge one needs to fulfill their dream in STEM, setting them up for a path to realize their potential and impact the world as future scientists and innovators. With nearly 1,000 pages of written guides and numerous bootcamps, our own Pandora's box is here to guide you to your potential. As for how you use this newfound knowledge, that we leave up to you.</p>
     </div>
