--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
 </head>
 <body>
     <header >
-        <div class="crazy">
-            <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
-        </div>
-        <div class="head">
-            <a href="projects.html"><button id="prod">Projects</button></a>
-            <a href="programs.html"><button id="prog">Programs</button></a>
-            <a href="team.html"><button id="te">Our Team</button></a>
-            <a href="contact.html"><button id="cont">Contact</button></a>
-        </div>
+      <div class="head" style="padding-bottom: 2vh">
+        <div><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /> </div>
+        <a href="index.html"><button id="yoop">Home</button></a>
+        <!-- <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a> -->
+        <a href="projects.html"><button id="prod">Projects</button></a>
+        <a href="programs.html"><button id="prog">Programs</button></a>
+        <a href="team.html"><button id="te">Our Team</button></a>
+        <a href="contact.html"><button id="cont">Contact</button></a>
+    </div>
     </header>
 
   <p class="cool">
