--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -10,18 +10,19 @@
       @import url('https://fonts.cdnfonts.com/css/poppins');
     </style>
 </head>
-<header>
-    <div class="crazy">
-        <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a>
-    </div>
-    <div class="head" style="padding-bottom: 2vh">
-        <a href="projects.html"><button id="prod">Projects</button></a>
-        <a href="programs.html"><button id="prog">Programs</button></a>
-        <a href="team.html"><button id="te">Our Team</button></a>
-        <a href="contact.html"><button id="cont">Contact</button></a>
-    </div>
-</header>  
+ 
 <body>
+  <header>
+    <div class="head" style="padding-bottom: 2vh">
+      <div><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /> </div>
+      <a href="index.html"><button id="yoop">Home</button></a>
+      <!-- <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a> -->
+      <a href="projects.html"><button id="prod">Projects</button></a>
+      <a href="programs.html"><button id="prog">Programs</button></a>
+      <a href="team.html"><button id="te">Our Team</button></a>
+      <a href="contact.html"><button id="cont">Contact</button></a>
+  </div>
+  </header> 
     <h1>USABO Bootcamp</h1>
     
     <section class="description">
