--- a/programs.html
+++ b/programs.html
@@ -45,7 +45,7 @@
   <div class="info">
     <section class="naclo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100">
       <h2>NACLO Bootcamp</h2>
-      <p id="idk">Taught by IOL medalists & NACLO winners, this 10 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by IOL medalists & NACLO winners, this 10 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic">NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color: #ff7ee3" href="naclobootpage.html"><p style="margin-top: 10px">Learn More </p></a>
     </section> 
 
